# openGL-abstracted

./: .gitignore  CMakeLists.txt
res/shaders/: shaders.shader
src/: indexBuff.cpp  indexBuff.h  main.cpp  mgl.cpp  mgl.h  mglErr.cpp  mglErr.h  shader.cpp  shader.h  vertexBuff.cpp  vertexBuff.h
